feat(env): add environment variables and secrets for MariaDB and WordPress configuration

--- a/srcs/.env
+++ b/srcs/.env
@@ -4,5 +4,16 @@ DOMAIN_NAME=ppour-ba.42.fr
 # MARIADB
 MYSQL_DATABASE=wordpress_db
 MYSQL_USER=wpuser
-MYSQL_PASSWORD=supersecurepassword
-MYSQL_ROOT_PASSWORD=rootsecurepassword
+MYSQL_PASSWORD_FILE=/run/secrets/db_password.txt
+MYSQL_ROOT_PASSWORD_FILE=/run/secrets/db_root_password.txt
+
+# WP
+# Admin user
+WP_ADMIN_USER=manager42
+WP_ADMIN_PASSWORD_FILE=/run/secrets/credentials.txt
+WP_ADMIN_EMAIL=manager42@42.fr
+
+# Regular user
+WP_USER=visitor42
+WP_USER_PASSWORD_FILE=/run/secrets/user_credentials.txt
+WP_USER_EMAIL=visitor42@42.fr
