--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -68,8 +68,16 @@ services:
 
 volumes:
   wordpress_files:
+    driver_opts:
+      o: bind
+      type: none
+      device: /home/${USER}/data/wordpress
   mariadb:
-
+    driver_opts:
+      o: bind
+      type: none
+      device: /home/${USER}/data/mariadb
+      
 networks:
   inception:
     driver: bridge
