--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -66,6 +66,29 @@ services:
       - credentials.txt
       - user_credentials.txt
 
+  redis:
+    build:
+      context: .
+      dockerfile: requirements/bonus/redis/Dockerfile
+    container_name: redis
+    ports:
+      - "6379:6379"
+    networks:
+      - inception
+    restart: always
+  adminer:
+    build:
+      context: .
+      dockerfile: requirements/bonus/adminer/Dockerfile
+    container_name: adminer
+    depends_on:
+      - mariadb
+    ports:
+      - "8080:8080"
+    networks:
+      - inception
+    restart: always
+
 volumes:
   wordpress_files:
     driver_opts:
