feat(compose): configure static-site service with build context and port mapping

--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -88,6 +88,14 @@ services:
     networks:
       - inception
     restart: always
+  static-site:
+    build: ./requirements/bonus/static-site
+    container_name: static-site
+    ports:
+      - "8082:8000"
+    networks:
+      - inception
+    restart: always
 
 volumes:
   wordpress_files:
