chore(env): add FTP password path to environment variables

--- a/srcs/.env
+++ b/srcs/.env
@@ -17,3 +17,5 @@ WP_ADMIN_EMAIL=manager42@42.fr
 WP_USER=visitor42
 WP_USER_PASSWORD_FILE=/run/secrets/user_credentials.txt
 WP_USER_EMAIL=visitor42@42.fr
+
+FTP_PASSWORD=/run/secrets/ftp_password.txt
